--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.moviesapp2">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,6 +13,9 @@
         android:roundIcon="@drawable/movie_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoviesApp2">
+        <activity
+            android:name=".WebActivity2"
+            android:exported="false" />
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
