--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'org.jsoup:jsoup:1.11.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "androidx.fragment:fragment:1.3.6"
